--- a/a01.html
+++ b/a01.html
@@ -1,7 +1,35 @@
 <html>
+<head>
+  
+  <style> 
+  div
+  {
+  width:100px;
+  height:75px;
+  background-color:red;
+  border:1px solid black;
+  }
+  div#div2
+  {
+  transform:rotate(30deg);
+  -ms-transform:rotate(30deg); /* IE 9 */
+  -moz-transform:rotate(30deg); /* Firefox */
+  -webkit-transform:rotate(30deg); /* Safari and Chrome */
+  -o-transform:rotate(30deg); /* Opera */
+  }
+  </style>
+  
+</head>
 <body>
 <h3>This page is create using text editor on github site  name is kcgithubacct</h3>
-<p>Hope this work. I am still at lost</p>
+<p>It works!</p>
+  
+<p>I will add some formatting now</p>
+
+
+<div>Hello. This is a DIV element.</div>
+
+<div id="div2">Hello. This is a DIV element.</div>
 
 </body>
 </html>
