--- a/a01.html
+++ b/a01.html
@@ -4,10 +4,15 @@
   <style> 
   div
   {
+  border:2px solid #a1a1a1;
+  padding:10px 40px; 
+  background:#dddddd;
+  width:300px;
+  border-radius:25px;
+  -moz-border-radius:25px; /* Old Firefox */
   width:100px;
   height:75px;
-  background-color:red;
-  border:1px solid black;
+  background-color:#dddddd;
   }
   div#div2
   {
