--- a/a01.html
+++ b/a01.html
@@ -28,7 +28,9 @@
 <body>
 <h3>This page is create using text editor on github site  name is kcgithubacct</h3>
 <p>It works! You have to go to your github account under master directory add new or edit web page , Once you commit then you can view your new page right away at  cu-test.azurewebsites.net/a01.html  This is this page and just example</p>
-  
+<?php
+echo ("Hello World! This one is an echo by php");
+?>
 <p>I will add some formatting now</p>
 
 
