--- a/maps.html
+++ b/maps.html
@@ -30,6 +30,9 @@ Apache license (http://www.apache.org/licenses/LICENSE-2.0.html)
         var northEast = bounds.getNorthEast();
         var lngSpan = northEast.lng() - southWest.lng();
         var latSpan = northEast.lat() - southWest.lat();
+        
+        console.log("bounds = %s", bounds);
+        
         for (var i = 0; i < 10; i++) {
           var latLng = new google.maps.LatLng(southWest.lat() + latSpan * Math.random(),
                                               southWest.lng() + lngSpan * Math.random());
