--- a/a01.html
+++ b/a01.html
@@ -26,7 +26,7 @@
   
 </head>
 <body>
-<h3>This page is create using text editor on github site  name is kcgithubacct</h3>
+<h3>Create using text editor on github site  name is kcgithubacct pen</h3>
 <p>It works! You have to go to your github account under master directory add new or edit web page , Once you commit then you can view your new page right away at  cu-test.azurewebsites.net/a01.html  This is this page and just example</p>
 <?php
 echo ("Hello World! This one is an echo by php");
