--- a/aJquery.html
+++ b/aJquery.html
@@ -6,6 +6,7 @@
 <script>
 $(document).ready(function(){
   $("button").click(function(){
+    $("test").hide();
     $("p").hide();
   });
 });
@@ -13,9 +14,12 @@ $(document).ready(function(){
 </head>
 
 <body>
-<h2>This is a heading</h2>
+<h2 class="test">This is a heading with class test</h2>
+<h2>This is a heading with no class specify</h2>
 <p>This is a paragraph.</p>
-<p>This is another paragraph.</p>
+<p class="test">This is another paragraph. with class = test </p>
+<div>This is div no class</div>
+<div class="test">This is div with class = test </div>
 <button>Click me</button>
 </body>
 
