--- a/aJquery.html
+++ b/aJquery.html
@@ -6,7 +6,7 @@
 <script>
 $(document).ready(function(){
   $("button").click(function(){
-    $("test").hide();
+    $(".test").hide();
     $("p").hide();
   });
 });
