--- a/css01.html
+++ b/css01.html
@@ -10,6 +10,10 @@
 
 <p style="color:sienna;margin-left:20px">This is a paragraph with inline style</p>
 <hr>
+<h1 style="font-weight:normal;">H1 normal weight</h1>
+<hr>
+<h1>H1 Lighter weight</h1>
+<br>
 <div class="spread">
   Just Test text spacing 6px  style  div.spread
 </div>
