--- a/css01.html
+++ b/css01.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" href="kcstyle.css">
 </head>
 <body>
-
+<h1>Style from kcstyle.css</h1>
 <p style="color:sienna;margin-left:20px">This is a paragraph with inline style</p>
 <hr>
 <h1 style="color:gold;font-weight:normal;">H1 normal weight</h1>
