--- a/css01.html
+++ b/css01.html
@@ -12,7 +12,7 @@
 <hr>
 <h1 style="color:gold;font-weight:normal;">H1 normal weight</h1>
 <hr>
-<h1 style="color:blue;font-weight:lighter;">H1 Lighter weight</h1>
+<h1 style="color:blue;font-weight:lighter;">H1 Lighter weight try again on Aug 23</h1>
 <br>
 <div class="spread">
   Just Test text spacing 6px  style  div.spread
