--- a/css01.html
+++ b/css01.html
@@ -15,7 +15,7 @@
 <h1 style="color:blue;font-weight:lighter;">H1 Lighter weight try again on Aug 23</h1>
 <br>
 <div class="spread">
-  Just Test text spacing 6px  style  div.spread
+  Just Test text spacing 6px  style  div.spread Change color to red in kcstyle.css
 </div>
 <div>This is regular div</div>
 
