--- a/a02.html
+++ b/a02.html
@@ -22,7 +22,7 @@
        <span style="background-color:#B4009E;color:#ffffff;">Boxes</span>
     </div>
 
-    <div style="color:#000000;">and more...Code are from w3schools website</div>
+    <div style="color:#000000;">and more...Code are from w3schools website feb 6</div>
   </div>
   
 </body>
