Just look around

--- a/a02.html
+++ b/a02.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>HTML, PHP, Javascript, MySQL practice area</title>
-<meta name="description" content="Pieces of code snippet">
+<meta name="description" content="Pieces of code snippet look around May 15, 2016">
 <meta charset="UTF-8">
 </head>
 <body>
